[project]
name = "kvarnen-electricity"
version = "2025.8.1"
description = "Process invoices for electricity"
readme = "README.md"
authors = [
    { name = "Daniel Engval", email = "daniel@engvalls.eu" }
]
requires-python = ">=3.12"
dependencies = [
    "docling>=2.43.0",
    "loguru>=0.7.3",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "polars>=1.32.0",
]

[project.scripts]
kvarnen-electricity = "kvarnen_electricity:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "wat>=0.6.0",
]
